# ascii-art-animator

./: .gitignore  ASCII Art Animator.md  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.claude/: launch.json
.github/workflows/: release.yml
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: App.tsx
src/app/canvas/: AsciiCanvas.tsx
src/app/colors/: ColorPicker.tsx
src/app/controls/: PlaybackControls.tsx  Toolbar.tsx
src/app/export/: exportUtils.ts
src/app/header/: Header.tsx
src/app/palette/: CharPalette.tsx
src/app/timeline/: Timeline.tsx
src/app/welcome/: WelcomeScreen.tsx
src/assets/: ascii-art.txt
src/components/: WindowControls.tsx
src/components/ui/: button.tsx  scroll-area.tsx  slider.tsx  sonner.tsx  tooltip.tsx
src/lib/: ansiColors.ts
src/modules/theme/: ThemeProvider.tsx
src/store/: editorStore.ts
src/styles/: globals.css
src/types/: gifenc.d.ts
